fix: fix password visibility toggle for mobile devices

--- a/src/app/modules/login/login/login.scss
+++ b/src/app/modules/login/login/login.scss
@@ -40,3 +40,10 @@ button[type='submit'] {
   font-weight: 500;
   margin-top: 16px;
 }
+button[mat-icon-button] {
+  width: 48px;
+  height: 48px;
+  position: relative;
+  z-index: 2;
+  touch-action: manipulation;
+}
